@@ -597,7 +597,12 @@ going like Number::Phone::NANP::XX.
 
 Please report bugs by at L<https://github.com/DrHyde/perl-modules-Number-Phone/issues>, including, if possible, a test case.
 
-I welcome feedback from users.
+=head1 MAILING LIST
+
+There is a mailing list for discussion and help. Please subscribe at
+L<http://lists.scsys.co.uk/cgi-bin/mailman/listinfo/number-phone>.
+
+Kindly hosted by L<Shadowcat|http://scsys.co.uk>.
 
 =head1 SEE ALSO
 
